# bpf-mem

./: Cargo.toml  build.rs  run.yaml
docker/: Dockerfile  glibc.dockerfile  libgcc_s.dockerfile  libssl.dockerfile
event/: Cargo.toml
event/src/: event.rs  lib.rs
server/: Cargo.toml  openapi.json
server/src/: lib.rs  memory_map.rs  server.rs  stack.rs  state.rs  table.rs
server/src/collector/: aggregator.rs  consumer.rs  mod.rs
server/src/history/: abstract_tracker.rs  allocation.rs  error.rs  history.rs  mod.rs  page.rs  page_history.rs  report.rs  tests.rs
server/tests/: compare.rs  positive.rs
src/: main.rs
