[workspace]
members = [
    ".",
    "event",
    "server",
]

[package]
name = "bpf-mem"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bpf-mem-kern"
path = "src/main.rs"
required-features = ["kern"]

[[bin]]
name = "bpf-mem-user"
path = "src/main.rs"
required-features = ["user"]

[dependencies]
ebpf-kern = { version = "0.2.0", optional = true }
ebpf-user = { version = "0.2.0", optional = true }
passfd = { version = "0.1.6", optional = true }
ctrlc = { version = "3.4", optional = true }
env_logger = { version = "0.10.1", default-features = false, optional = true }
log = { version = "0.4.20", optional = true }
serde = { version = "1.0", optional = true }

event = { path = "event", optional = true }
server = { path = "server", optional = true }

[features]
default = ["user"]
kern = ["ebpf-kern/macros", "event"]
user = [
    "ebpf-user/macros",
    "passfd",
    "ctrlc",
    "env_logger",
    "log",
    "serde/derive",
    "event",
    "server",
]
