[package]
name = "server"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@viablesystems.io>"]
edition = "2018"

[dev-dependencies]
reqwest = "0.11"
rand = "0.8"

[dependencies]
log = { version = "0.4.20" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
elf64 = "0.1.2"
thiserror = { version = "1.0" }
rustc-demangle = { version = "0.1.23" }
cpp_demangle = { version = "0.4.3" }

ctrlc = { version = "3.1" }

warp = { version = "0.3.6" }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }

event = { path = "../event", features = ["user"] }
